force-app/main/default/objects/numm__data_import__c/numm__data_import__c.object-meta.xml
<CustomObject>
    <label>Import de donnée</label>
    <nameField>
        <displayFormat>Import-{0000}</displayFormat>
        <label>Nom de Import de donnée</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import de données</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>