force-app/main/default/objects/numm__data_import__c/fields/numm__file_name__c.field-meta.xml
<CustomField>
    <fullName>numm__file_name__c</fullName>
    <label>file name</label>
    <type>TextArea</type>
</CustomField>