force-app/main/default/objects/numm__data_import__c/fields/numm__info__c.field-meta.xml
<CustomField>
    <fullName>numm__info__c</fullName>
    <label>info</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>