force-app/main/default/objects/numm__data_import__c/fields/numm__mail_exp__c.field-meta.xml
<CustomField>
    <fullName>numm__mail_exp__c</fullName>
    <label>E-mail expéditeur</label>
    <type>Email</type>
</CustomField>