force-app/main/default/objects/numm__data_import__c/fields/numm__Statut__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente de traitements</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Succès</fullName>
            </value>
            <value>
                <fullName>Erreur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>