force-app/main/default/objects/numm__data_import__c/fields/numm__type__c.field-meta.xml
<CustomField>
    <fullName>numm__type__c</fullName>
    <label>type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>