force-app/main/default/objects/numm__data_import__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>